Switch to native adventure components